--- a/WebQLNS/Views/PhongBan/Index.cshtml
+++ b/WebQLNS/Views/PhongBan/Index.cshtml
@@ -13,9 +13,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.MaPhongBan)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.TenPhongBan)
             </th>
             <th>
@@ -31,9 +28,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.MaPhongBan)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.TenPhongBan)
             </td>
             <td>
@@ -46,7 +40,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>|
-                <a asp-action="Test" asp-route-id="@item.Id">Test </a>
+                <a asp-action="Test" asp-route-id="@item.Id">Tổng quan </a>
             </td>
         </tr>
 }
