--- a/WebQLNS/Views/Shared/_LoginPartial.cshtml
+++ b/WebQLNS/Views/Shared/_LoginPartial.cshtml
@@ -1,63 +1,47 @@
-﻿<style>
-    .login-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
+﻿@model WebQLNS.Models.Users
 
-    .login-form {
-        width: 400px;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        background-color: #f5f5f5;
-    }
+@using (Html.BeginForm())
+{
+	@Html.ValidationSummary(true)
 
-    .form-group {
-        margin-bottom: 20px;
-    }
 
-    .control-label {
-        font-weight: bold;
-    }
+	<link href="~/css/style.css" rel="stylesheet" />
+	<div class="container">
+		<div class="screen">
+			<div class="screen__content">
+				<form class="login">
+					<div class="login__cac">
+						<i class="login__icon fas fa-user"></i>
+						@Html.TextBoxFor(model => model.Username,  new { @class = "login__input", placeholder = "User name / Email" })
+						@Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+					</div>
+					<div class="login__field">
+						<i class="login__icon fas fa-lock"></i>
+						@Html.PasswordFor(model => model.Password,  new { @class = "login__input", placeholder = "Password" })
+						@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+					</div>
 
-    .form-control {
-        border-radius: 5px;
-    }
+					<button type="submit" class="button login__submit">
+						<span class="button__text">Log In Now</span>
+						<i class="button__icon fas fa-chevron-right"></i>
+					</button>
+				</form>
 
-    .btn-primary {
-        background-color: #007bff;
-        border-color: #007bff;
-    }
+				<div class="social-login">
 
-        .btn-primary:hover {
-            background-color: #0069d9;
-            border-color: #0062cc;
-        }
-</style>
-
-<div class="login-container">
-    <div class="login-form">
-        @model WebQLNS.Models.Users
-
-        @using (Html.BeginForm())
-        {
-            @Html.ValidationSummary(true)
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label" })
-                @Html.TextBoxFor(model => model.Username, new { @class = "form-control", placeholder = "Username" })
-                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-                @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Password" })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-
-            <button type="submit" class="btn btn-primary">Login</button>
-        }
-    </div>
-</div>
+					<div class="social-icons">
+						<a href="#" class="social-login__icon fab fa-instagram"></a>
+						<a href="#" class="social-login__icon fab fa-facebook"></a>
+						<a href="#" class="social-login__icon fab fa-twitter"></a>
+					</div>
+				</div>
+			</div>
+			<div class="screen__background">
+				<span class="screen__background__shape screen__background__shape4"></span>
+				<span class="screen__background__shape screen__background__shape3"></span>
+				<span class="screen__background__shape screen__background__shape2"></span>
+				<span class="screen__background__shape screen__background__shape1"></span>
+			</div>
+		</div>
+	</div>
+}
