--- a/WebQLNS/Views/NhanVien/Create.cshtml
+++ b/WebQLNS/Views/NhanVien/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="NgaySinh" class="control-label"></label>
-                <input asp-for="NgaySinh" class="form-control" />
+                <input asp-for="NgaySinh" class="form-control" type="date" />
                 <span asp-validation-for="NgaySinh" class="text-danger"></span>
             </div>
             <div class="form-group">
