--- a/WebQLNS/Views/NhanVien/Details.cshtml
+++ b/WebQLNS/Views/NhanVien/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.PhongBan)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhongBan.Id)
+            @Html.DisplayFor(model => model.PhongBan.TenPhongBan)
         </dd>
     </dl>
 </div>
