--- a/WebQLNS/Views/Shared/_Layout.cshtml
+++ b/WebQLNS/Views/Shared/_Layout.cshtml
@@ -26,10 +26,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-
                         <!-- Mục menu cho vai trò "Admin" -->
                         @if (roleName == "Admin")
                         {
@@ -48,6 +44,13 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetAllAttendance">Quản lý Chấm công</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rewardPentaly" asp-action="Index">Quản lý thưởng phạt</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="NhanVien" asp-action="SalesReports">báo cáo lương</a>
+                            </li>
+
                         }
 
                         <!-- Mục menu cho vai trò "chuyenvien" -->
@@ -55,6 +58,9 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="ChuyenVien" asp-action="Index">Quản lý chuyên viên</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="GetAllAttendance">Quản lý Chấm công</a>
                             </li>
                         }
 
@@ -68,11 +74,12 @@
                     </ul>
                     <div class="dropdown">
                         <a class="dropdown-toggle text-dark" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Welcome, <strong>@ViewBag.Username</strong>
+                            Welcome  <strong>@ViewBag.Username</strong>
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
+                            <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Profile">Profile</a>
                         </div>
                     </div>
                 </div>
